// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorObserver Snapshot ErrorObserver 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver with child as function 1`] = `
<Text>
  Hello
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver with error 1`] = `
<Text>
  Error
</Text>
`;
